detail movie finish

--- a/home.html
+++ b/home.html
@@ -77,7 +77,7 @@
                         <div>
                             <h5>Spider-Man</h5>
                             <p>Adventure, Action, Sci-Fi</p>
-                            <button>Details</button>
+                            <a href="detail_movie.html"><button>Details</button></a>
                         </div>
                     </div>
                     <img class="img2" src="img/2.png" alt="" style="align-self: flex-start">
@@ -86,7 +86,7 @@
                         <div>
                             <h5>lion King</h5>
                             <p>AdventureSci-Fi</p>
-                            <button>Details</button>
+                            <a href="detail_movie.html"><button>Details</button></a>
                         </div>
                     </div>
                     <img class="img3" src="img/3.png" alt="" style="align-self: flex-start">
@@ -95,7 +95,7 @@
                         <div>
                             <h5>John 3 Wick</h5>
                             <p>Action, Sci-Fi</p>
-                            <button>Details</button>
+                            <a href="detail_movie.html"><button>Details</button></a>
                         </div>
                     </div>
                     <img class="img4" src="img/4.png" alt="" style="align-self: flex-start">
@@ -104,7 +104,7 @@
                         <div>
                             <h5>Black Widow</h5>
                             <p>Adventure, Action, Sci-Fi</p>
-                            <button>Details</button>
+                            <a href="detail_movie.html"><button>Details</button></a>
                         </div>
                     </div>
                     <img class="img5" src="img/5.png" alt="" style="align-self: flex-start">
@@ -113,7 +113,7 @@
                         <div>
                             <h5>The Witches</h5>
                             <p>Adventure, Action, Sci-Fi</p>
-                            <button>Details</button>
+                            <a href="detail_movie.html"><button>Details</button></a>
                         </div>
                     </div>
                 </div>
@@ -139,7 +139,7 @@
                         <div>
                             <h5>Spider-Man</h5>
                             <p>Adventure, Action, Sci-Fi</p>
-                            <button>Details</button>
+                            <a href="detail_movie.html"><button>Details</button></a>
                         </div>
                     </div>
                     <div class="card-movie m2">
@@ -147,7 +147,7 @@
                         <div>
                             <h5>lion King</h5>
                             <p>AdventureSci-Fi</p>
-                            <button>Details</button>
+                            <a href="detail_movie.html"><button>Details</button></a>
                         </div>
                     </div>
                     <div class="card-movie m3">
@@ -155,7 +155,7 @@
                         <div>
                             <h5>John 3 Wick</h5>
                             <p>Action, Sci-Fi</p>
-                            <button>Details</button>
+                            <a href="detail_movie.html"><button>Details</button></a>
                         </div>
                     </div>
                     <div class="card-movie m4">
@@ -163,7 +163,7 @@
                         <div>
                             <h5>Black Widow</h5>
                             <p>Adventure, Action, Sci-Fi</p>
-                            <button>Details</button>
+                            <a href="detail_movie.html"><button>Details</button></a>
                         </div>
                     </div>
                     <div class="card-movie m5">
@@ -171,7 +171,7 @@
                         <div>
                             <h5>The Witches</h5>
                             <p>Adventure, Action, Sci-Fi</p>
-                            <button>Details</button>
+                            <a href="detail_movie.html"><button>Details</button></a>
                         </div>
                     </div>
                 </div>
