--- a/index.html
+++ b/index.html
@@ -49,18 +49,18 @@
                 </div>
             </section>
             <section class="content-2">
-                <div class="top">
+                <div class="top" onclick="hidden_m1()">
                     <h2>Now Showing</h2>
                     <a href="list_movie.html">view all</a>
                 </div>
                 <div class="bottom">
-                    <img class="img1" src="img/1.png" alt="" style="align-self: flex-start">
-                    <div class="card-movie m1" style="flex-shrink: 0">
-                        <img src="img/1.png" alt="">
+                    <img id="img_m1" class="img1" src="img/1.png" alt="" style=" align-self: flex-start">
+                    <div class="card-movie m1" id="m1" style="flex-shrink: 0">
+                        <img src="img/1.png" onclick="show_m1()" alt="">
                         <div>
                             <h5>Spider-Man</h5>
                             <p>Adventure, Action, Sci-Fi</p>
-                            <button>Details</button>
+                            <a href="detail_movie.html"><button>Details</button></a>
                         </div>
                     </div>
                     <img class="img2" src="img/2.png" alt="" style="align-self: flex-start">
@@ -69,7 +69,7 @@
                         <div>
                             <h5>lion King</h5>
                             <p>AdventureSci-Fi</p>
-                            <button>Details</button>
+                            <a href="detail_movie.html"><button>Details</button></a>
                         </div>
                     </div>
                     <img class="img3" src="img/3.png" alt="" style="align-self: flex-start">
@@ -78,7 +78,7 @@
                         <div>
                             <h5>John 3 Wick</h5>
                             <p>Action, Sci-Fi</p>
-                            <button>Details</button>
+                            <a href="detail_movie.html"><button>Details</button></a>
                         </div>
                     </div>
                     <img class="img4" src="img/4.png" alt="" style="align-self: flex-start">
@@ -87,7 +87,7 @@
                         <div>
                             <h5>Black Widow</h5>
                             <p>Adventure, Action, Sci-Fi</p>
-                            <button>Details</button>
+                            <a href="detail_movie.html"><button>Details</button></a>
                         </div>
                     </div>
                     <img class="img5" src="img/5.png" alt="" style="align-self: flex-start">
@@ -96,7 +96,7 @@
                         <div>
                             <h5>The Witches</h5>
                             <p>Adventure, Action, Sci-Fi</p>
-                            <button>Details</button>
+                            <a href="detail_movie.html"><button>Details</button></a>
                         </div>
                     </div>
                 </div>
@@ -122,7 +122,7 @@
                         <div>
                             <h5>Spider-Man</h5>
                             <p>Adventure, Action, Sci-Fi</p>
-                            <button>Details</button>
+                            <a href="detail_movie.html"><button>Details</button></a>
                         </div>
                     </div>
                     <div class="card-movie m2">
@@ -130,7 +130,7 @@
                         <div>
                             <h5>lion King</h5>
                             <p>AdventureSci-Fi</p>
-                            <button>Details</button>
+                            <a href="detail_movie.html"><button>Details</button></a>
                         </div>
                     </div>
                     <div class="card-movie m3">
@@ -138,7 +138,7 @@
                         <div>
                             <h5>John 3 Wick</h5>
                             <p>Action, Sci-Fi</p>
-                            <button>Details</button>
+                            <a href="detail_movie.html"><button>Details</button></a>
                         </div>
                     </div>
                     <div class="card-movie m4">
@@ -146,7 +146,7 @@
                         <div>
                             <h5>Black Widow</h5>
                             <p>Adventure, Action, Sci-Fi</p>
-                            <button>Details</button>
+                            <a href="detail_movie.html"><button>Details</button></a>
                         </div>
                     </div>
                     <div class="card-movie m5">
@@ -154,7 +154,7 @@
                         <div>
                             <h5>The Witches</h5>
                             <p>Adventure, Action, Sci-Fi</p>
-                            <button>Details</button>
+                            <a href="detail_movie.html"><button>Details</button></a>
                         </div>
                     </div>
                 </div>
