--- a/list_movie.html
+++ b/list_movie.html
@@ -88,7 +88,7 @@
                         <div>
                             <h5>Spider-Man</h5>
                             <p>Adventure, Action, Sci-Fi</p>
-                            <button>Details</button>
+                            <a href="detail_movie.html"><button>Details</button></a>
                         </div>
                     </div>
                 </div>
@@ -98,7 +98,7 @@
                         <div>
                             <h5>Spider-Man</h5>
                             <p>Adventure, Action, Sci-Fi</p>
-                            <button>Details</button>
+                            <a href="detail_movie.html"><button>Details</button></a>
                         </div>
                     </div>
                 </div>
@@ -108,7 +108,7 @@
                         <div>
                             <h5>Spider-Man</h5>
                             <p>Adventure, Action, Sci-Fi</p>
-                            <button>Details</button>
+                            <a href="detail_movie.html"><button>Details</button></a>
                         </div>
                     </div>
                 </div>
@@ -118,7 +118,7 @@
                         <div>
                             <h5>Spider-Man</h5>
                             <p>Adventure, Action, Sci-Fi</p>
-                            <button>Details</button>
+                            <a href="detail_movie.html"><button>Details</button></a>
                         </div>
                     </div>
                 </div>
@@ -128,7 +128,7 @@
                         <div>
                             <h5>Spider-Man</h5>
                             <p>Adventure, Action, Sci-Fi</p>
-                            <button>Details</button>
+                            <a href="detail_movie.html"><button>Details</button></a>
                         </div>
                     </div>
                 </div>
@@ -138,7 +138,7 @@
                         <div>
                             <h5>Spider-Man</h5>
                             <p>Adventure, Action, Sci-Fi</p>
-                            <button>Details</button>
+                            <a href="detail_movie.html"><button>Details</button></a>
                         </div>
                     </div>
                 </div>
@@ -148,7 +148,7 @@
                         <div>
                             <h5>Spider-Man</h5>
                             <p>Adventure, Action, Sci-Fi</p>
-                            <button>Details</button>
+                            <a href="detail_movie.html"><button>Details</button></a>
                         </div>
                     </div>
                 </div>
@@ -158,7 +158,7 @@
                         <div>
                             <h5>Spider-Man</h5>
                             <p>Adventure, Action, Sci-Fi</p>
-                            <button>Details</button>
+                            <a href="detail_movie.html"><button>Details</button></a>
                         </div>
                     </div>
                 </div>
